force-app/main/default/objects/User_Sub_Motion__mdt/User_Sub_Motion__mdt.object-meta.xml
<CustomObject>
    <label>User Sub Motion</label>
    <pluralLabel>User Sub Motions</pluralLabel>
</CustomObject>