force-app/main/default/objects/User_Sub_Motion__mdt/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <description>MIS-6829 - Used in &quot;User - Record Triggered - Before Save&quot; Flow</description>
    <label>Role Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>