force-app/main/default/objects/User_Sub_Motion__mdt/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <description>MIS-6829 - Used in &quot;User - Record Triggered - Before Save&quot; Flow</description>
    <label>Sub Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>