force-app/main/default/objects/User_Sub_Motion__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Role_Type__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Sub_Motion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
    <language>en_US</language>
</ListView>